sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: illegal start of simple pattern
    for (var i <- tab.length - 2){
         ^AlgBubbleSort1:18: error: '<-' expected but '}' found.
  }while (tab_has_changed);
  ^